Add default build task group for VSCode

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,7 +12,13 @@
       "command": "beet build && beet watch",
       "isBackground": true,
       "problemMatcher": [],
-      "runOptions": { "runOn": "folderOpen" }
+      "runOptions": {
+        "runOn": "folderOpen"
+      },
+      "group": {
+        "kind": "build",
+        "isDefault": true
+      }
     }
   ]
 }
